# links

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  build.cmd  build.sh  main.cpp  vcpkg.json
.github/workflows/: build.yml
cmake/: FetchLiveKitSDK.cmake  FetchWebRTCAudioProcessing.cmake
core/: audio_processing_module.cpp  audio_processing_module.h  camera_capturer.cpp  camera_capturer.h  conference_manager.cpp  conference_manager.h  image_types.h  media_manager.cpp  media_manager.h  microphone_capturer.cpp  microphone_capturer.h  network_client.cpp  network_client.h  platform_window_ops.cpp  platform_window_ops.h  room_event_delegate.cpp  room_event_delegate.h  screen_capturer.cpp  screen_capturer.h  thumbnail_service.cpp  thumbnail_service.h  window_types.h
core/conference/: conference_manager.cpp  conference_manager.h  conference_types.h  device_controller.cpp  device_controller.h  media_pipeline.cpp  media_pipeline.h  participant_store.cpp  participant_store.h  room_controller.cpp  room_controller.h
core/desktop_capture/: README.md  capture_options.h  desktop_capturer.cpp  desktop_capturer.h  desktop_frame.cpp  desktop_frame.h  desktop_geometry.h
core/desktop_capture/linux/x11/: platform_window_ops_linux_x11.cpp  platform_window_ops_linux_x11.h  x11_capturer.cpp  x11_capturer.h
core/desktop_capture/mac/: mac_capturer.cpp  mac_capturer.h  platform_window_ops_mac.cpp  platform_window_ops_mac.h  screen_capture_kit_adapter.h  screen_capture_kit_adapter.mm
core/desktop_capture/win/: dxgi_duplicator.cpp  dxgi_duplicator.h  gdi_capturer.cpp  gdi_capturer.h  platform_window_ops_win.cpp  platform_window_ops_win.h  wgc_capturer.cpp  wgc_capturer.h  window_utils.cpp  window_utils.h
docs/: BUILD_GUIDE.md  FIXES.md  README.md  SDK_EXTENSIONS.md  auth_implementation_2026_01_21.md  qt6-qml-module-migration.md  refactoring_log_2026_01_13.md
docs/deprecated/client-sdk-cpp/: CMakeLists.txt
docs/deprecated/client-sdk-cpp/doc/: AUDIO_VIDEO_FIX_SUMMARY.md  COMPILE_FIXES.md  Requirements for completing the thesis proposal.md  thesis_proposal_webrtc_conference.md  开题答辩.md
docs/deprecated/client-sdk-cpp/include/livekit/: audio_source.h  ffi_client.h  livekit.h  participant.h  room.h  track.h  video_source.h
docs/deprecated/client-sdk-cpp/src/: audio_source.cpp  ffi_client.cpp  participant.cpp  room.cpp  track.cpp  video_source.cpp
docs/deprecated/ui/: FramelessWindow.cpp  FramelessWindow.h  WindowEffect.cpp  WindowEffect.h  chat_panel.cpp  chat_panel.h  conference_window.cpp  conference_window.h  gl_video_widget.cpp  gl_video_widget.h  login_window.cpp  login_window.h  participant_item.cpp  participant_item.h  screen_picker_dialog.cpp  screen_picker_dialog.h  settings_dialog.cpp  settings_dialog.h  video_widget.cpp  video_widget.h
docs/server-api/: README.md  auth.md  health.md  overview.md  participants.md  rooms.md  token.md
server/links-sig-rust-server/: .env  Cargo.toml
server/links-sig-rust-server/src/: livekit_client.rs
server/livekit-signaling-server/: Caddyfile  docker-compose.yml  livekit.yaml
server/livekit-signaling-server/links-sig-go-server/: .env.example  main.go
server/livekit-signaling-server/links-sig-rust-server/: .env.example
server/livekit-signaling-server/links-sig-rust-server/src/: config.rs  handlers.rs  main.rs  models.rs  token.rs
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_audio_processing_module.cpp  test_desktop_frame.cpp  test_desktop_geometry.cpp  test_microphone_capturer.cpp  test_platform_window_ops_capability.cpp  test_thumbnail_service.cpp
tests/integration/: test_capture_backend_benchmark.cpp  test_screen_capture_smoke.cpp  test_window_capture_smoke.cpp
ui/adapters/qt/: qt_capture_adapter.cpp  qt_capture_adapter.h
ui/backend/: AuthBackend.cpp  AuthBackend.h  ConferenceBackend.cpp  ConferenceBackend.h  LoginBackend.cpp  LoginBackend.h  ScreenPickerBackend.cpp  ScreenPickerBackend.h  SettingsBackend.cpp  SettingsBackend.h  ShareModeManager.cpp  ShareModeManager.h  VideoRenderer.cpp  VideoRenderer.h
ui/qml/: main.qml
ui/qml/components/: CheckBox.qml  ComboBox.qml  IconButton.qml  LinkButton.qml  PillToggle.qml  PrimaryButton.qml  SecondaryButton.qml  TabButton.qml  TextField.qml  TitleBar.qml
ui/qml/conference/: CameraThumbnail.qml  ChatMessage.qml  ChatPanel.qml  ConferenceTitleBar.qml  ConferenceWindow.qml  ControlBar.qml  FloatingControlBar.qml  LeaveDialog.qml  MainVideoPanel.qml  ParticipantItem.qml  RightSidebar.qml  VideoSidebar.qml  VideoThumbnail.qml
ui/qml/home/: AuthModal.qml  GuestPromptDialog.qml  HomeContactsPage.qml  HomeMeetingPage.qml  HomeNavButton.qml  HomeRecordingPage.qml  HomeSidebar.qml  HomeUserCard.qml  HomeWindow.qml  InviteOptionCard.qml  LoginPromptCard.qml  MeetingListItem.qml  MeetingListPanel.qml  QuickActionCard.qml  QuickStartForm.qml  ScheduleForm.qml  ShareScreenForm.qml
ui/qml/login/: AuthField.qml  AuthTabs.qml  AuthTextField.qml  AvatarPicker.qml  HeroPanel.qml  JoinForm.qml  LoginCard.qml  LoginForm.qml  LoginWindow.qml  RegisterForm.qml
ui/qml/screenpicker/: GhostButton.qml  ScreenPickerDialog.qml  ScreenPickerTabBar.qml  ScreenPickerTitleBar.qml  ShareButton.qml  ThumbnailItem.qml  WindowGrid.qml
ui/qml/settings/: AudioSettings.qml  NetworkSettings.qml  SettingsDialog.qml  SettingsPanel.qml  SettingsWindow.qml  VideoSettings.qml
utils/: logger.cpp  logger.h  settings.cpp  settings.h
