[package]
name = "links-sig-rust-server"
version = "0.1.0"
edition = "2021"
description = "LiveKit signaling server implemented in Rust with Axum"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment and config
dotenvy = "0.15"

# JWT for LiveKit tokens
jsonwebtoken = "9"

# HTTP client for LiveKit API
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 encoding for Twirp
base64 = "0.21"

# Protobuf for LiveKit API (Twirp)
prost = "0.12"

# Official LiveKit API SDK
livekit-api = "0.4"
